<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- android_large___1 strings -->


	<string name="ek_img_content">ExportKit Image</string>
	<string name="btn_id">아이디 찾기</string>
	<string name="btn_pw">비밀번호 찾기</string>
	<string name="btn_join">회원가입</string>
	<string name="btn_login">로그인</string>
	<string name="app_name">manage</string>
	<string name="hello_world">Hello world!</string>
	<string name="action_settings">Settings</string>
	<string name="room1">discordNotion</string>
	<string name="room2">프로젝트</string>
	<string name="room3">일정</string>
	<string name="room4">안드로이드 스튜디오</string>
</resources>